2.33 (0000-00-00)
Libraries:
- libgwyprocess: Speed of tip blind estimate was improved by not reporting
  progress too often.
- libgwyapp: Tools can remember and restore also position of the dialog,
  within one session.

Modules:
- Dimensions and Units: It is possible to set the pixel size to match exactly
  another channel.  Undo warnings were fixed.
- TIA SER: spectral arrays reimplemented as volume data.
- Volume show and extract: Crash for data with unequal resolutions in different
  dimensions was fixed.
- Merge: Pixel size of images created in ‘None’ merge mode correspond to
  pixel size of the merged images.
- Tip blind estimate: Estimate can be made for several horizontal stripes on
  the image and tip radius for each estimated.
- Pixmap: Loading of TIFFs on 64bit MS Windows was disabled because the
  system library crashes.
- IGOR file: Units are correctly derived from channels starting with ‘DAC’.
- GWYXYZF: Compilation on big endian architectures was fixed.
- Arithmetic: Aspect ratio setting of result is taken from the first channel
  used in the expresssion.
- EZD file: Support for 32bit depth was added.


2.32 (2013-09-08)
Application:
- GLib 2.14 is now required.
- Translations updated: Czech, French, Russian, Spanish.
- Metadata browser is no longer present in Meta menu.  Access it via the
  right-click (Shift-F10) context menu of data (and volume) windows.

Libraries:
- libgwydgets: 3D view can display data overlays without any lighting.
- libgwydgets: Unwanted window dragging with KDE oxygen theme was hopefully
  fixed.
- libgwyapp: Support for volume data and functions were added to the data
  browser and menu constructors.
- libgwymodule: Volume data processing module management functions were added.
- libgwyprocess: Summary statistical functions for bricks were added.
- libgwyapp: Toolbox items sensitivity corresponds to data available in the
  current file, not globally.  This fixes a long-standing bug when it was